# TianHaiProject

./: .env.example  .gitignore  00-master-plan-TianHai.md  :memory:  AGENTS.md  pyproject.toml
docs/: phase-1-architecture-foundation.md  phase-2-primary-agent.md  phase-3-incident-workflow-layer.md  phase-4-java-log-analysis-team.md  phase-5-memory-v1.md  phase-6-knowledge-evidence-baseline.md  phase-7-control-plane.md  phase-8-api-surface-governance.md  phase-9-explicit-investigation-routing.md
src/tianhai/: __init__.py  config.py
src/tianhai/agents/: __init__.py  primary.py
src/tianhai/control/: __init__.py  plane.py  policy.py  types.py
src/tianhai/domain/: __init__.py  diagnosis.py  incidents.py  logs.py
src/tianhai/knowledge/: __init__.py  baseline.py  types.py
src/tianhai/memory/: __init__.py  policy.py  types.py
src/tianhai/runtime/: __init__.py  assembly.py  boundaries.py  routing.py
src/tianhai/server/: __init__.py  app.py  factory.py  governance.py
src/tianhai/teams/: __init__.py  java_log_analysis.py
src/tianhai/tools/: __init__.py
src/tianhai/workflows/: __init__.py  incident.py
tests/: test_api_surface_governance.py  test_boundaries.py  test_control_plane.py  test_domain_models.py  test_incident_workflow.py  test_incidents.py  test_investigation_routing.py  test_java_log_analysis_team.py  test_knowledge_baseline.py  test_memory_policy.py  test_primary_agent.py  test_runtime_assembly.py
